--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <h1>Hello Johnny Five!</h1>
+  <script src="app.js"></script>
+  <script src="sample.js"></script>
 </body>
 </html>
